Temporary addition of INFSOF paper

--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@ th, td {
 
 <table style="width:100%">
   <tr>
+    <td><b>[11]</b></td>
+    <td><b>INFSOF'26</b></td>
+    <td>
+      <a href="https://arxiv.org/abs/2504.18602">
+	<b>Beyond Platforms -- Growing Distributed Transaction Networks for Digital Commerce</b></a>
+      <br>
+      Yvonne Dittrich, Kim Peiter Jørgensen, Ravi Prakash, Willard Rafnsson, <u>Jonas Kastberg Hinrichsen</u><br>
+    </td>
+  </tr>
+  <tr>
     <td><b>[10]</b></td>
     <td><b>OOPSLA'26</b></td>
     <td>
