Qualified INFSOF article further

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ th, td {
     <td><b>INFSOF'26</b></td>
     <td>
       <a href="https://arxiv.org/abs/2504.18602">
-	<b>Beyond Platforms -- Growing Distributed Transaction Networks for Digital Commerce</b></a>
+	<b>Beyond Platforms -- Growing Distributed Transaction Networks for Digital Commerce [Accepted 05/01/26, arXiv pending]</b></a>
       <br>
       Yvonne Dittrich, Kim Peiter Jørgensen, Ravi Prakash, Willard Rafnsson, <u>Jonas Kastberg Hinrichsen</u><br>
     </td>
