Updated to published version of Beckn paper

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ th, td {
     <td><b>[11]</b></td>
     <td><b>INFSOF'26</b></td>
     <td>
-      <a href="https://arxiv.org/abs/2504.18602">
-	<b>Beyond Platforms -- Growing Distributed Transaction Networks for Digital Commerce [Accepted 05/01/26]</b></a>
+      <a href="./papers/2026_infsof_beckn.pdf">
+	<b>Beyond Platforms -- Growing Distributed Transaction Networks for Digital Commerce</b></a>
       <br>
       Yvonne Dittrich, Kim Peiter Jørgensen, Ravi Prakash, Willard Rafnsson, <u>Jonas Kastberg Hinrichsen</u><br>
     </td>
