--- a/index.html
+++ b/index.html
@@ -197,13 +197,14 @@ Dependent Higher-Order Message Passing</b></a>
 <p><a href="./papers/thesis.pdf"> Sessions and Separation </a></p>
 
 <h2>Selected Talks</h2>
+<p>2026, February 10, Dagstuhl Seminar 26071 [<a href="./talks/26-02-10_dagstuhl.pdf">Slides</a>]</p>
 <p>2025, December 11, IT University of Copenhagen, CISAT [<a href="./talks/25-12-11_itu.pdf">Slides</a>]</p>
 <p>2025, February 25, Aalborg University, Seminar [<a href="./talks/25-02-25_aau.pdf">Slides</a>]</p>
 <!-- <p>2024, December 3, IT University of Copenhagen, Seminar [<a href="./talks/24-06-04_iris_workshop.pdf">Slides</a>]</p> -->
 <p>2024, June 03, Iris Workshop <font color="darkred">[Invited talk]</font> [<a href="./talks/24-06-04_iris_workshop.pdf">Slides</a>]</p>
 <p>2024, May 14, Uppsala University, Seminar [<a href="./talks/24-05-14_uppsala.pdf">Slides</a>]</p>
 <!-- <p>2024, March 18, Aarhus University, Seminar [<a href="./talks/24-03-18_aarhus.pdf">Slides</a>]</p> -->
-<p>2024, January 31, Dagstuhl Seminar [<a href="./talks/24-01-31_dagstuhl.v">Coq Demo</a>]</p>
+<p>2024, January 31, Dagstuhl Seminar 24051 [<a href="./talks/24-01-31_dagstuhl.v">Coq Demo</a>]</p>
 <p>2023, September 07, ICFP Conference [<a href="./talks/23-09-07_icfp.pdf">Slides</a>]</p>
 <p>2023, May 23, Iris Workshop [<a href="./talks/23-05-23_iris_workshop.pdf">Slides</a>]</p>
 <!-- <p>2023, March 03, Aarhus University, Iris Seminar [<a href="./talks/23-03-03_iris_seminar.pdf">Slides</a>]</p> -->
